feat: ensure thin scroll-bars in our app

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,6 +65,10 @@
   }
 }
 
+* {
+  scrollbar-width: thin;
+}
+
 .spinner_ajPY {
   transform-origin: center;
   animation: spinner_AtaB 0.75s infinite linear;
