refactor: add some useful styling to improve transition on viewing task details

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,10 @@
   content: "%";
 }
 
+.animate-grid {
+  transition: grid-template-rows 0.5s;
+}
+
 .spinner_ajPY {
   transform-origin: center;
   animation: spinner_AtaB 0.75s infinite linear;
