--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -119,6 +119,41 @@
   display: none;
 }
 
+nav > a {
+  position: relative;
+}
+
+nav > a::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: black;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s;
+}
+
+nav > a:hover::before {
+  transform: scaleX(1);
+}
+
+.gradient-background {
+  background: rgb(58, 179, 180);
+  background: linear-gradient(
+    137deg,
+    rgba(58, 179, 180, 1) 0%,
+    rgba(109, 126, 208, 1) 17%,
+    rgba(224, 91, 105, 1) 27%,
+    rgba(194, 29, 253, 1) 45%,
+    rgba(29, 101, 253, 1) 60%,
+    rgba(134, 29, 253, 1) 73%,
+    rgba(253, 29, 60, 1) 83%
+  );
+}
+
 .spinner_ajPY {
   transform-origin: center;
   animation: spinner_AtaB 0.75s infinite linear;
