--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,6 +68,12 @@
 * {
   scrollbar-width: thin;
 }
+html {
+  scroll-behavior: smooth;
+}
+body {
+  transform: perspective(1000px);
+}
 
 .add-percentage .tooltip-value::after {
   content: "%";
@@ -156,6 +162,43 @@ nav > a:hover::before {
     rgba(134, 29, 253, 1) 73%,
     rgba(253, 29, 60, 1) 83%
   );
+}
+
+.rotate-card {
+  transform-style: preserve-3d;
+  transition: transform 0.5s linear;
+}
+
+.back-side {
+  transform: rotateY(180deg);
+}
+
+.rotate-card:hover {
+  transform: rotateY(180deg);
+}
+
+.card {
+  @apply w-1/3 lg:w-1/4;
+  height: 31.25rem;
+  position: relative;
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  transition: transform 0.5s linear;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.side {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.back-side {
+  transform: rotateY(180deg);
 }
 
 .break {
